[tool.poetry]
name = "expense_tracker"
version = "0.1.0"
description = "A FastAPI expense tracker"
authors = ["Mehwash Shahzadi <mehwashshahzadi@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0"
pydantic = "^2.0"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
